Try to fix default margin on iPhone

--- a/client/main.css
+++ b/client/main.css
@@ -1,8 +1,12 @@
 /* CSS declarations go here */
+* {
+  margin: 0;
+  padding: 0;
+}
+
 body {
   font-family: helvetica, sans-serif;
   font-size: 14px;
-  margin: 0px;
 }
 
 #login-buttons {
